# opendaff

./: .cproject  .project  CMakeLists.txt  COMPILING.txt  COPYING.LESSER  FILEFORMAT.md  Makefile  Makefile.Linux  Makefile.MacOS  Makefile.common  Makefile.project  Makefile.sources  README.md  TODO.txt
apps/tool/: CMakeLists.txt  DAFFTool.cpp  DAFFTool.vcxproj.user.proto  Export.cpp  Export.h
apps/tool/getopt/: getopt.h
apps/tool/res/: DAFFTool.rc
apps/viewer/: CMakeLists.txt  DAFFViewer.pro
apps/viewer/res/: DAFFViewerRes.h  QDAFFViewer.qrc
apps/viewer/src/: DAFFViewer.cpp  DAFFViewer.rc  QDAFF2DPlot.cpp  QDAFF2DPlot.h  QDAFF2DPlotFrame.h  QDAFFContentTable.h  QDAFFDialogExport2DPlot.cpp  QDAFFDialogExport2DPlot.h  QDAFFDialogExport3DPlotImage.cpp  QDAFFDialogExport3DPlotImage.h  QDAFFDialogExport3DPlotImageSeries.cpp  QDAFFDialogExport3DPlotImageSeries.h  QDAFFHeaderGroupBox.h  QDAFFMetadataTable.h  QDAFFPropertiesTable.h  QDAFFVTKFrame.h  QDAFFVTKWidget.cpp  QDAFFVTKWidget.h  QDAFFViewer.cpp  QDAFFViewerWindow.cpp  QDAFFViewerWindow.h  daffreadergroupbox.h  main.cpp  mainwindowdaffviewer.cpp  mainwindowdaffviewer.h
apps/viewer/ui/: QDAFFDialogExport2DPlot.ui  QDAFFDialogExport3DPlotImage.ui  QDAFFDialogExport3DPlotImageSeries.ui  QDAFFViewerWindow.ui  mainwindowdaffviewer.ui  ui_QDAFFViewerWindow.h  ui_mainwindowdaffviewer.h
bindings/: Readme.txt
bindings/Matlab/: COMPILING.txt  daffmex.def  make.m
bindings/csharp/: CMakeLists.txt  DAFF.cs  DAFFCSWrapper.cpp  DAFFCSWrapper.h  DAFFTest.cs  DAFFTest.csproj
bindings/matlab/: CMakeLists.txt  DAFF.m  DAFFMEX.cpp  DAFFMEX.def  DAFFMexHelpers.cpp  DAFFMexHelpers.h  DAFFMexMain.cpp  Helpers.cpp  Helpers.h  README.md  build_Matlab_DAFF.m
bindings/python/: CMakeLists.txt  LICENSE.md  MANIFEST.in  README.md  daff_example.py  distutils_build_python_daff.bat  distutils_build_python_daff_with_lib.bat  pydaff.cpp  pydaffdoc.hpp  setup.py  setup.py.proto  setup_with_lib.py.proto
cmake/: FindFFTW.cmake  FindMatlab.cmake  FindPython.cmake  FindSndFile.cmake
doc/: CMakeLists.txt  Makefile  cxx-api.doxyfile  doxyfile  doxyfile.in  doxygen.footer.html  doxygen.footer.html.in  doxygen.header.html  make_dafftool_manpage.bat
include/: DAFF.h  DAFFContent.h  DAFFContentDFT.h  DAFFContentIR.h  DAFFContentMPS.h  DAFFContentMS.h  DAFFContentPS.h  DAFFDefs.h  DAFFMetadata.h  DAFFProperties.h  DAFFReader.h  DAFFSCTransform.h  DAFFTransformerIR2DFT.h  DAFFUtils.h
include/daffviz/: DAFFViz.h  DAFFVizArrow.h  DAFFVizBalloonPlot.h  DAFFVizCarpetPlot.h  DAFFVizCartesianCoordinateAssistant.h  DAFFVizGlobalLock.h  DAFFVizGrid.h  DAFFVizLabel.h  DAFFVizLine.h  DAFFVizPlane.h  DAFFVizSGNode.h  DAFFVizSphere.h  DAFFVizSphericalCoordinateAssistant.h  DAFFVizSphericalDirectionIndicator.h  FXVTK2BalloonPlot.h  FXVTK2CarpetPlot.h  IFXDAFFDialogBox.h  IFXDAFFDialogBoxRes.h  IFXDAFFFrame.h
matlab/: README.md  daff_add_metadata.m  daff_effective_bounds.m  daff_lwrmul.m  daff_metadata_addKey.m  daff_uprmul.m  daff_write.m  daff_write_metadata.m  daffv17_add_metadata.m  daffv17_convert_from_SH.m  daffv17_convert_from_daffv15.m  daffv17_copy_append_metadata.m  daffv17_effective_bounds.m  daffv17_generate_examples.m  daffv17_lwrmul.m  daffv17_test_query_performance.m  daffv17_uprmul.m  daffv17_write.m  daffv17_write_metadata.m  generate_examples.m
matlab/Benchmarks/: testQueryPerformance.m
matlab/Examples/: Readme.txt  dfBulbMS.m  dfCubeMS.m  dfDipoleMS.m  dfDiscMS.m  dfFrontalDiracMS.m  dfFrontalHemisphereMS.m  dfOmnidirectionalMS.m  dfQuadrupoleMS.m  dfStarMS.m  dfUnitySphereMS.m  dfUpperHemisphereMS.m  exampleReadImpulseResponse.m  exampleReadMagnitudeSpectrum.m  (+2 more)
python/: DAFF.py  DAFFOrientation.py  DAFFProperties.py  DAFF_example.ipynb  README.md
src/: CMakeLists.txt  DAFFHeader.h  DAFFMetadataImpl.cpp  DAFFMetadataImpl.h  DAFFPropertiesImpl.h  DAFFReader.cpp  DAFFReaderImpl.cpp  DAFFReaderImpl.h  DAFFSCTransform.cpp  DAFFSCTransform.h  DAFFTransformerIR2DFT.cpp  DAFFTransformerIR2DFT.h  DAFFUtils.cpp  Utils.cpp  Utils.h
src/daffviz/: DAFFVizArrow.cpp  DAFFVizBalloonPlot.cpp  DAFFVizCarpetPlot.cpp  DAFFVizCartesianCoordinateAssistant.cpp  DAFFVizGlobalLock.cpp  DAFFVizGrid.cpp  DAFFVizLabel.cpp  DAFFVizLine.cpp  DAFFVizPlane.cpp  DAFFVizSGNode.cpp  DAFFVizSphere.cpp  DAFFVizSphericalCoordinateAssistant.cpp  DAFFVizSphericalDirectionIndicator.cpp  FXVTK2BalloonPlot.cpp  FXVTK2CarpetPlot.cpp  IFXDAFFDialogBox.cpp  IFXDAFFFrame.cpp  IFXFancyTable.cpp  IFXFancyTable.h
tests/: CMakeLists.txt
tests/daffviz/: CMakeLists.txt  VTKDAFFVizWindow.cpp  VTKDAFFVizWindow.h  main.cpp
tests/daffviztest/: CMakeLists.txt  VTKDAFFVizWindow.cpp  VTKDAFFVizWindow.h  main.cpp
tests/deserializertest/: CMakeLists.txt  DAFFFileBufferTest.cpp  DAFFQtResourceTest.cpp  DAFFQtResourceTest.qrc  ExampleUnityOmni.v17.ms.daff
tests/qtdaffviztest/: CMakeLists.txt  QtDAFFVizTest.vcxproj.user.proto  QtDAFFVizTestWindow.cpp  QtDAFFVizTestWindow.h  QtDAFFVizTestWindow.ui  main.cpp  ui_DAFFVizQtTestWindow.h
tests/qttest/: CMakeLists.txt  DAFFUserTemplate.vcxproj.user.proto  DAFFVizQtTest.pro  DAFFVizQtTestWindow.cpp  DAFFVizQtTestWindow.h  main.cpp  ui_DAFFVizQtTestWindow.h
tests/qtvtktest/: CMakeLists.txt  DAFFVizQtVTKRenderWindow.cpp  DAFFVizQtVTKRenderWindow.h  DAFFVizQtVTKRenderWindow.ui  DAFFVizQtVTKTest.pro  DAFFVizQtVTKTest.vcxproj.user.proto  VTKDAFFVizWindow.cpp  VTKDAFFVizWindow.h  main.cpp  ui_DAFFVizQtVTKRenderWindow.h
tests/tryout/: CMakeLists.txt  EndianessTest.cpp  MetadataImplTest.cpp  ReaderTest.cpp  SCTransformTest.cpp
tests/verification/: CMakeLists.txt  VerificationTest.cpp
tests/vtkdaffircarpet/: CMakeLists.txt  main.cpp
tests/vtktest/: CMakeLists.txt  MovieTest.cpp  main.cpp
utils/DAFFTool/: CMakeLists.txt  DAFFTool.rc  Makefile
utils/DAFFTool/src/: CMakeLists.txt  DAFFTool.cpp  Export.cpp  Export.h
utils/DAFFViewer/: CMakeLists.txt  DAFFViewer.rc  DAFFViewer.vcproj  Makefile
utils/DAFFViewer/Src/: AboutDialog.cpp  AboutDialog.h  Globals.h  InfoDialog.cpp  InfoDialog.h  Main.cpp  MainWindow.cpp  MainWindow.h
(+84 files in other folders)
