add_subdirectory( "daffviztest" )
add_subdirectory( "qttest" )
add_subdirectory( "tryout" )
add_subdirectory( "verification" )
add_subdirectory( "qtvtktest" )
add_subdirectory( "vtktest" )
add_subdirectory( "vtkdaffircarpet" )
add_subdirectory( "qtdaffviztest" )
add_subdirectory( "deserializertest" )
